<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensors adventure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="shake_it_false">Shake it!!!</string>
    <string name="shake_it_true">You shaked it!!</string>

    <string name="message_null">Message is null</string>
    <string name="label_sensor_name">Name: </string>
    <string name="label_sensor_vendor">Vendor: </string>
    <string name="label_sensor_type">Type: </string>
    <string name="label_sensor_power">Power: </string>
    <string name="label_sensor_resolution">Resolution: </string>
    <string name="label_sensor_max_range">Max range: </string>
    <string name="label_sensor_version">Version: </string>
    <string name="label_sensor_min_delay">Min delay: </string>
    <string name="label_sensor_value">Value: </string>
    <string name="fragment_title_sensor_list">Sensor List</string>
    <string name="fragment_game_title">Game</string>

    //fragment sensor details
    <string name="fragment_title_sensor_details">Sensor details</string>
    <string name="fragment_title_sensor_values">Sensor values</string>
    <string name="fragment_details_value_label">Value: </string>

    //Fragment light
    <string name="light_label">Light: </string>

    //Fragment titles
    <string name="available_sensors_title">Available sensors</string>
    <string name="compas_title">Compas</string>
    <string name="shuffed_detect_title">Shuffed detect</string>
    <string name="light_title">Light</string>
    <string name="ball_title">Ball</string>

    //Icons
    <string name="icone_default">&#xf062;</string>
    <string name="icone_sensor_list">&#xf0ca;</string>
    <string name="icone_compas">&#xf14e;</string>
    <string name="icone_shuffed_detect">&#xf087;</string>
    <string name="icone_light">&#xf0eb;</string>
    <string name="icone_ball">&#xf198;</string>

    //Fonts
    <string name="font_fontawesome">fontawesome.ttf</string>

    //GameView
    <string name="max_min_error">Max X and Max Y not seted</string>
    <string name="time_label">Time: </string>
    <string name="finished_label">Finished</string>
    <string name="high_score_label">High score: </string>
    <string name="points_label">Points: </string>
    <string name="restart_label">Restart</string>
    <string name="finish_label">Finish</string>

</resources>
